[package]
name = "helium-multi-gateway"
version = "0.1.0"
edition = "2021"
authors = ["Louis Thiery"]
description = "Multi-gateway aggregator for Helium LoRaWAN network"
license = "Apache-2.0"

[package.metadata.deb]
maintainer = "Louis <louis@helium.com>"
section = "net"
conf-files = ["/etc/helium-multi-gateway/settings.toml"]
assets = [
    ["target/release/helium-multi-gateway", "usr/bin/", "755"],
    ["debian/settings.toml", "etc/helium-multi-gateway/settings.toml", "640"],
    ["debian/helium-multi-gateway.service", "lib/systemd/system/helium-multi-gateway.service", "644"],
]
maintainer-scripts = "debian/"

[dependencies]
anyhow = "1"
axum = "0.8"
base64 = "0.22"
clap = { version = "4.5", features = ["derive"] }
config = "0.15"
futures = "0.3"
gateway-rs = { git = "https://github.com/lthiery/gateway-rs.git", branch = "update-tonic-and-deps" }
http = "1"
http-serde = "2"
once_cell = "1"
prometheus = "0.13"
qr2term = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.48", features = ["full"] }
tracing = "0.1"
tracing-appender = "0"
tracing-subscriber = { version = "0", default-features = false, features = [
    "smallvec",
    "fmt",
    "std",
] }
semtech-udp = { git = "https://github.com/lthiery/semtech-udp.git", branch = "configurable-disconnect-timeout", default-features = false, features = ["server"] }
triggered = "0.1"

[patch.crates-io]
semtech-udp = { git = "https://github.com/lthiery/semtech-udp.git", branch = "configurable-disconnect-timeout" }
